--- a/app/src/main/res/layout/activity_add_visits.xml
+++ b/app/src/main/res/layout/activity_add_visits.xml
@@ -186,7 +186,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Distance Covered"
+                        android:text="Distance Covered (miles)"
                         android:id="@+id/getFocus"
                         android:textColor="@color/grey"
                         android:layout_marginTop="5dp"
@@ -198,7 +198,8 @@
                         android:textColor="@color/grey"
                         android:textSize="15sp"
                         android:layout_height="35dp"
-                        android:text="4500"
+                        android:text=""
+                              android:hint="Distance traveled to complete visit"
                         android:id="@+id/distance"
                         android:inputType="numberDecimal" />
                 </LinearLayout>
@@ -210,6 +211,7 @@
             <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                            android:background="@color/white"
                 android:id="@+id/select_date"
                 android:orientation="horizontal">
                 <ImageView
@@ -224,7 +226,6 @@
                     android:src="@drawable/ic_time_grey" />
                 <LinearLayout android:layout_width="match_parent"
                     android:layout_weight="1"
-                    style="@style/EditTextStyle"
                     android:textColorHint="@color/grey"
                     android:hint="Date of Sales"
                     android:textSize="15sp"
@@ -251,7 +252,8 @@
                         android:textColor="@color/grey"
                         android:textSize="13sp"
                         android:layout_height="35dp"
-                        android:text="July 11, 2016"
+                        android:text=""
+                        android:hint="Click to choose date"
                         android:inputType="number"
                         android:gravity="center_vertical" />
 
@@ -277,6 +279,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:id="@+id/select_time"
+                            android:background="@color/white"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/img_timer1"
@@ -290,7 +293,6 @@
                     android:src="@drawable/ic_time_grey" />
                 <LinearLayout android:layout_width="match_parent"
                     android:layout_weight="1"
-                    style="@style/EditTextStyle"
                     android:textColorHint="@color/grey"
                     android:hint="Date of Sales"
                     android:textSize="15sp"
@@ -304,7 +306,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Time Visit sale was made"
+                        android:text="Time visit was made"
                         android:textColor="@color/grey"
                         android:layout_marginTop="5dp"
                         android:textSize="10dp" />
@@ -316,7 +318,8 @@
                         android:textColor="@color/grey"
                         android:textSize="13sp"
                         android:layout_height="35dp"
-                        android:text="23:23"
+                        android:text=""
+                        android:hint="Click to choose time"
                         android:inputType="number"
                         android:gravity="center_vertical" />
 
