--- a/app/src/main/res/layout/fragment_add_sales.xml
+++ b/app/src/main/res/layout/fragment_add_sales.xml
@@ -98,12 +98,14 @@
                         android:hint="Enter title or description"
                         android:text=""
                         android:textColor="@color/schedule_title_bg_color" />
-                <LinearLayout style="@style/SeperatorHorizontal" />
+
             </LinearLayout>
+            <LinearLayout style="@style/SeperatorHorizontal" />
             <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:onClick="onClick"
+                          android:layout_marginTop="5dp"
                 android:id="@+id/select_client_layout"
                 android:orientation="horizontal">
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -197,7 +199,8 @@
                         android:textColor="@color/grey"
                         android:textSize="15sp"
                         android:layout_height="35dp"
-                        android:text="4500"
+                        android:text=""
+                              android:hint="0.00"
                               android:id="@+id/sale_amount"
                         android:inputType="numberDecimal" />
                 </LinearLayout>
@@ -209,10 +212,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:id="@+id/select_date"
+                            android:background="@color/white"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/img_timer"
-                    android:onClick="onClick"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="15dp"
@@ -222,7 +225,6 @@
                     android:src="@drawable/ic_time_grey" />
                 <LinearLayout android:layout_width="match_parent"
                     android:layout_weight="1"
-                    style="@style/EditTextStyle"
                     android:textColorHint="@color/grey"
                     android:hint="Date of Sales"
                     android:textSize="15sp"
@@ -244,12 +246,14 @@
 
                     <TextView
                         android:id="@+id/date"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="13sp"
-                        android:layout_height="35dp"
-                        android:text="July 11, 2016"
+                        android:layout_marginTop="4dp"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:hint="Click to choose date"
                         android:inputType="number"
                         android:gravity="center_vertical" />
 
