--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -142,11 +142,11 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingBottom="2dp"
-                    android:paddingTop="5dp">
+                    android:paddingTop="2dp">
 
                 <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="fill_parent"
                         style="@style/FieldLabels"
                         android:id="@+id/getFocus"
                         android:focusable="true"
@@ -159,6 +159,7 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
                         android:text=""
+                        android:hint="Enter company/business name"
                         android:textColor="@color/grey" />
                 <View android:layout_width="match_parent"
                       android:layout_height="0.1dp"
@@ -196,7 +197,7 @@
                         <TextView
                                 android:paddingLeft="5dp"
                                 android:id="@+id/address_tv"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:background="@android:color/white"
                                 android:textColor="@color/grey"
