--- a/app/src/main/res/layout/line_clients_list_item.xml
+++ b/app/src/main/res/layout/line_clients_list_item.xml
@@ -15,8 +15,9 @@
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/pic"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="5dp"
             android:layout_centerVertical="true"
             android:src="@mipmap/avatar_profile" />
 
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
+            android:textStyle="bold"
             android:layout_toLeftOf="@+id/check"
             android:layout_toRightOf="@+id/pic"
             android:ellipsize="end"
@@ -59,5 +61,5 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="15dp" />
     </RelativeLayout>
-
+<LinearLayout style="@style/SeperatorHorizontal"></LinearLayout>
 </LinearLayout>
