--- a/app/src/main/res/layout/activity_add_visits.xml
+++ b/app/src/main/res/layout/activity_add_visits.xml
@@ -5,7 +5,6 @@
     android:background="@drawable/background_blue"
     android:orientation="vertical"
     android:id="@+id/parent">
-
     <LinearLayout
         android:id="@+id/top"
         android:layout_width="match_parent"
@@ -25,6 +24,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="0dp"
+                android:paddingLeft="0dp"
                 android:text="Add a Visits"
                 android:textColor="@color/white"
                 android:textSize="17dp"
@@ -66,6 +66,7 @@
 
         </RelativeLayout>
 
+        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -76,7 +77,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp">
+                android:layout_marginLeft="63dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -98,12 +99,14 @@
                     android:hint="Enter title or description"
                     android:text=""
                     android:textColor="@color/schedule_title_bg_color" />
-                <LinearLayout style="@style/SeperatorHorizontal" />
+
             </LinearLayout>
+            <LinearLayout style="@style/SeperatorHorizontal" />
             <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:onClick="onClick"
+                          android:layout_marginTop="4dp"
                 android:id="@+id/select_client_layout"
                 android:orientation="horizontal">
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -114,13 +117,14 @@
                     android:layout_height="50dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="18dp"
                     android:layout_marginBottom="3dp"
                     android:src="@drawable/default_avatar" />
                 <TextView android:layout_width="0dp"
                     android:layout_weight="1"
                     android:id="@+id/client_name"
-                    style="@style/EditTextStyle"
+                          android:clickable="false"
+                          android:focusable="false"
                     android:textColor="@color/schedule_title_bg_color"
                     android:layout_height="wrap_content"
                     android:text="Select Client"
@@ -145,6 +149,8 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="15dp"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
@@ -155,10 +161,14 @@
                     android:textColor="@color/schedule_title_bg_color"
                     android:layout_height="wrap_content"
                     android:text="Location"
+                          android:clickable="false"
+                          android:focusable="false"
                     android:textSize="14sp"
                     android:id="@+id/location" />
                 <ImageView android:layout_width="20dp"
                     android:layout_height="20dp"
+                           android:clickable="false"
+                           android:focusable="false"
                     android:src="@drawable/ic_arrow_gray"/>
 
             </LinearLayout>
@@ -199,6 +209,7 @@
                         android:textColor="@color/grey"
                         android:textSize="15sp"
                         android:layout_height="35dp"
+
                         android:text=""
                               android:hint="Distance traveled to complete visit"
 
@@ -218,10 +229,11 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/img_timer"
-                    android:onClick="onClick"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="15dp"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
@@ -234,6 +246,8 @@
                     android:textColor="@color/grey"
                     android:layout_height="wrap_content"
                     android:text=""
+                              android:clickable="false"
+                              android:focusable="false"
                     android:layout_toRightOf="@+id/img_timer"
                     android:layout_toLeftOf="@+id/below"
                     android:layout_centerVertical="true"
@@ -253,7 +267,10 @@
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="13sp"
-                        android:layout_height="35dp"
+
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:focusable="false"
 
                         android:text=""
                         android:hint="Click to choose date"
@@ -269,6 +286,9 @@
 
                 </LinearLayout>
                 <ImageView
+                        android:clickable="false"
+                        android:focusable="false"
+
                     android:id="@+id/below"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -282,14 +302,15 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:id="@+id/select_time"
-                            android:background="@color/white"
+                 android:background="@color/white"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/img_timer1"
-                    android:onClick="onClick"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="15dp"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="15dp"
@@ -299,6 +320,8 @@
                     android:textColorHint="@color/grey"
                     android:hint="Date of Sales"
                     android:textSize="15sp"
+                              android:clickable="false"
+                              android:focusable="false"
                     android:textColor="@color/grey"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -316,11 +339,13 @@
 
                     <TextView
                         android:id="@+id/time"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="13sp"
                         android:layout_height="35dp"
+                        android:clickable="false"
+                        android:focusable="false"
 
                         android:text=""
                         android:hint="Click to choose time"
@@ -338,6 +363,8 @@
                 <ImageView
                     android:onClick="onClick"
                     android:id="@+id/below1"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/up_down_arrow"
@@ -350,8 +377,9 @@
 
 
         </LinearLayout>
-
+</ScrollView>
     </LinearLayout>
+
 
 
 </LinearLayout>
