--- a/app/src/main/res/layout/activity_co_worker_filter.xml
+++ b/app/src/main/res/layout/activity_co_worker_filter.xml
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="5,000 miles"
+                android:text="Any"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txt_miles"
@@ -126,9 +126,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
-            android:layout_marginTop="10dp"
-            android:max="10000"
-            android:progress="2500" />
+            android:layout_marginTop="10dp" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -417,6 +415,18 @@
                             android:textColor="@color/black"
                             android:textSize="15dp"
                             android:gravity="center_vertical" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="0 Selected"
+                                android:paddingLeft="10px"
+                                android:layout_toRightOf="@+id/textView17"
+                                android:id="@+id/num_territories"
+                                android:layout_marginLeft="15dp"
+                                android:textColor="@color/grey"
+                                android:textSize="15dp"
+                                android:gravity="center_vertical" />
+
 
                         <ImageView
                             android:layout_width="15dp"
@@ -448,6 +458,17 @@
                             android:textColor="@color/black"
                             android:textSize="15dp"
                             android:gravity="center_vertical" />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="0 Selected"
+                                android:paddingLeft="10px"
+                                android:layout_toRightOf="@+id/textView18"
+                                android:id="@+id/num_lines"
+                                android:layout_marginLeft="15dp"
+                                android:textColor="@color/grey"
+                                android:textSize="15dp"
+                                android:gravity="center_vertical" />
 
                         <ImageView
                             android:layout_width="15dp"
