--- a/app/src/main/res/layout/activity_line_client_list.xml
+++ b/app/src/main/res/layout/activity_line_client_list.xml
@@ -89,7 +89,7 @@
                 android:drawableLeft="@drawable/ic_search_grey_small"
                 android:textSize="13sp"
                 android:gravity="center"
-                android:hint="Search Name, Line, Phones"
+                android:hint="Search Name or Title"
                 android:paddingBottom="3dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -125,7 +125,18 @@
         </LinearLayout>
 
     </LinearLayout>
-
+    <TextView android:layout_width="wrap_content"
+              android:gravity="center"
+              android:layout_gravity="center"
+              android:text="No record found"
+              android:layout_margin="30dp"
+              android:background="@drawable/white_fill_grey_stroke"
+              android:padding="20dp"
+              android:textSize="15sp"
+              android:visibility="gone"
+              android:textColor="@color/light_gray"
+              android:id="@+id/no_results"
+              android:layout_height="wrap_content"/>
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
