--- a/app/src/main/res/layout/activity_profile_notifications.xml
+++ b/app/src/main/res/layout/activity_profile_notifications.xml
@@ -41,20 +41,22 @@
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="20dp"
             android:orientation="vertical">
 
 
-            <RelativeLayout
-                android:id="@+id/send_notification_deals"
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="60dp">
+                android:orientation="vertical"
+                android:paddingTop="10dp"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="15dp"
-                    android:text="Send notification for special deals"
+                    android:text="Send notification for account updates"
                     android:textColor="@color/schedule_title_bg_color"
                     android:textSize="16sp" />
 
@@ -68,24 +70,306 @@
                 <!--android:paddingLeft="20dp"-->
                 <!--android:layout_marginRight="15dp"-->
                 <!--android:background="@drawable/toogle_switch" />-->
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Email"
 
-                <Switch
-                    android:id="@+id/switch4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="15dp"
-                    android:checked="true"
-                    android:padding="10dp" />
-            </RelativeLayout>
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/update_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="13dp"
+                            android:text="Phone push"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/update_phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="0.1dp"
                 android:background="@android:color/darker_gray" />
+            <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_height="wrap_content">
 
-            <RelativeLayout
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:text="Send me coworkers update"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+
+                <!--<ToggleButton-->
+                <!--android:id="@+id/ToggleButton1"-->
+                <!--android:layout_width="64dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:checked="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:paddingLeft="20dp"-->
+                <!--android:layout_marginRight="15dp"-->
+                <!--android:background="@drawable/toogle_switch" />-->
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Email"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/coworker_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="false"
+                            android:padding="10dp" />
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Phone push"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/coworker_push"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="false"
+                            android:padding="10dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@android:color/darker_gray" />
+            <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:text="Notify when close to a client"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+
+                <!--<ToggleButton-->
+                <!--android:id="@+id/ToggleButton1"-->
+                <!--android:layout_width="64dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:checked="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:paddingLeft="20dp"-->
+                <!--android:layout_marginRight="15dp"-->
+                <!--android:background="@drawable/toogle_switch" />-->
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:visibility="gone"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Email"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/proximity_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Phone push"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/proximity_push"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@android:color/darker_gray" />
+            <LinearLayout
+                    android:id="@+id/send_notification_deals"
+                    android:layout_width="fill_parent"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp"
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:text="Send notification for special deals"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+
+                <!--<ToggleButton-->
+                <!--android:id="@+id/ToggleButton1"-->
+                <!--android:layout_width="64dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:checked="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:paddingLeft="20dp"-->
+                <!--android:layout_marginRight="15dp"-->
+                <!--android:background="@drawable/toogle_switch" />-->
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Email"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/special_email"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="30dp"
+                        android:orientation="horizontal">
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Phone push"
+                            android:textColor="@color/schedule_title_bg_color"
+                            android:textSize="13sp" />
+                    <Switch
+                            android:id="@+id/special_push"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:checked="true"
+                            android:padding="10dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:background="@android:color/darker_gray" />
+
+            <!-- <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="60dp">
 
@@ -169,6 +453,7 @@
 
 
             </RelativeLayout>
+            -->
 
             <TextView
                 android:layout_width="fill_parent"
