--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -105,6 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:id="@+id/monthPrice"
                         android:text="$9.99/month"
                         android:textColor="@color/grey"
                         android:textSize="24sp" />
@@ -114,6 +115,7 @@
 
         <ImageView
             android:id="@+id/img_month"
+            android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/plus"
@@ -171,6 +173,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="$99.99/year"
+                        android:id="@+id/yearPrice"
                         android:textColor="@color/grey"
                         android:textSize="24sp" />
                 </LinearLayout>
@@ -179,6 +182,7 @@
 
         <ImageView
             android:id="@+id/img_year"
+            android:onClick="onClick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/plus"
