--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -16,7 +16,7 @@
 <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:id="@+id/imageView2"
+        android:id="@+id/icon"
         android:src="@drawable/attention" />
 
 <TextView
