--- a/app/src/main/res/layout/main_activity_drawer_header.xml
+++ b/app/src/main/res/layout/main_activity_drawer_header.xml
@@ -110,7 +110,7 @@
                       android:text="Free Trial"
                       android:layout_alignParentRight="true"
                       android:textStyle="bold"
-
+android:visibility="invisible"
                       android:id="@+id/package_name"
                       android:textColor="@color/white"
                       android:layout_height="wrap_content"/>
@@ -121,7 +121,7 @@
                       android:textSize="11sp"
                       android:id="@+id/package_expiry"
                       android:layout_below="@+id/package_name"
-                      android:textColor="@color/red_color"
+                      android:textColor="#00ff00"
                       android:layout_height="wrap_content"/>
 
 
