--- a/app/src/main/res/layout/schedule_select_client_list_general.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_general.xml
@@ -45,23 +45,40 @@
 
             </LinearLayout>
             <LinearLayout
+                    android:id="@+id/clear_but"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:layout_toLeftOf="@+id/add_button"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_alignParentTop="true"
+                        android:padding="@dimen/action_bar_icon_padding"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/action_bar_icon_height"
+                        android:text="Clear"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
                     android:id="@+id/add_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:visibility="gone"
                     android:orientation="horizontal">
 
-                <ImageView
-
+                <TextView
                         android:layout_alignParentTop="true"
-                       style="@style/ActionBarIcon"
-
-                        android:id="@+id/clear_but"
-
-                        android:src="@drawable/checkmark" />
+                        android:padding="@dimen/action_bar_icon_padding"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/action_bar_icon_height"
+                        android:text="Done"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
             </LinearLayout>
 
         </RelativeLayout>
@@ -135,7 +152,7 @@
                 android:id="@+id/add_layout"
                 android:orientation="horizontal"
                 android:background="@color/schedule_create_appointment_bg_color"
-                android:visibility="visible">
+                android:visibility="gone">
 
             <TextView android:layout_width="0dp"
                       android:layout_weight="1"
