--- a/app/src/main/res/layout/activity_line_client_list.xml
+++ b/app/src/main/res/layout/activity_line_client_list.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_blue"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="54dp"
+        android:background="@drawable/background_blue">
 
         <LinearLayout
             android:orientation="vertical"
@@ -128,22 +129,22 @@
     <TextView android:layout_width="wrap_content"
               android:gravity="center"
               android:layout_gravity="center"
-              android:text="No record found"
+              android:text="You have no clients in this territory"
               android:layout_margin="30dp"
               android:background="@drawable/white_fill_grey_stroke"
               android:padding="20dp"
               android:textSize="15sp"
-              android:visibility="gone"
-              android:textColor="@color/light_gray"
+        android:textColor="@color/light_gray"
               android:id="@+id/no_results"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/upper_layout"
         android:listSelector="@android:color/transparent"
         android:scrollbars="none"
         android:background="@color/white" />
 
-</RelativeLayout>
+</LinearLayout>
