--- a/app/src/main/res/layout/activity_sale_client_sale_details.xml
+++ b/app/src/main/res/layout/activity_sale_client_sale_details.xml
@@ -122,6 +122,19 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
 
+        <TextView android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="All you sales are listed here. Click to Add a sale"
+            android:layout_margin="30dp"
+            android:background="@drawable/white_fill_grey_stroke"
+            android:padding="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/light_gray"
+            android:id="@+id/no_results"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
