--- a/app/src/main/res/layout/activity_visits.xml
+++ b/app/src/main/res/layout/activity_visits.xml
@@ -61,15 +61,15 @@
         <TextView android:layout_width="wrap_content"
                   android:gravity="center"
                   android:layout_gravity="center"
-                  android:text="You have no visits recorded"
+                  android:text=" All you visits made to this client are listed here. Click to Add a visit"
                   android:layout_margin="30dp"
                   android:background="@drawable/white_fill_grey_stroke"
                   android:padding="20dp"
                   android:textSize="15sp"
-                  android:visibility="gone"
-                  android:textColor="@color/light_gray"
+            android:textColor="@color/light_gray"
                   android:id="@+id/no_results"
-                  android:layout_height="wrap_content"/>
+                  android:layout_height="wrap_content"
+            android:visibility="gone" />
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
