--- a/app/src/main/res/layout/fragment_lines.xml
+++ b/app/src/main/res/layout/fragment_lines.xml
@@ -45,22 +45,21 @@
 
 <LinearLayout android:layout_width="match_parent"
               android:orientation="vertical"
-              android:gravity="center"
-              android:background="@android:color/white"
+    android:background="@android:color/white"
               android:layout_height="match_parent">
 
     <TextView android:layout_width="wrap_content"
               android:gravity="center"
               android:layout_gravity="center"
-              android:text="No lines found"
+              android:text="All you lines are listed here. Click to Add a line "
               android:layout_margin="30dp"
               android:background="@drawable/white_fill_grey_stroke"
               android:padding="20dp"
               android:textSize="15sp"
-              android:visibility="gone"
-              android:textColor="@color/light_gray"
+        android:textColor="@color/light_gray"
               android:id="@+id/no_results"
-              android:layout_height="wrap_content"/>
+              android:layout_height="wrap_content"
+        android:visibility="gone" />
     <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
